--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.10"
+rocket_cors = "0.5.1"
 mongodb = {version = "2.1.0", default-features = false, features = ["sync"] }
 serde = { version = "1.0", features = ["derive"] }
 rocket_contrib = { version = "0.4.6" }
