--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,3 +12,5 @@ mongodb = {version = "2.1.0", default-features = false, features = ["sync"] }
 serde = { version = "1.0", features = ["derive"] }
 rocket_contrib = { version = "0.4.6" }
 dotenv_codegen = "0.15.0"
+rand = "0.8.4"
+lazy_static = "1.4.0"
