--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,4 @@ dotenv_codegen = "0.15.0"
 rand = "0.8.4"
 lazy_static = "1.4.0"
 reqwest = { version = "0.11.9", features = ["blocking", "json"] }
+time = "0.1.37"
