--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /frontend/node_modules
 frontend/package-lock.json
+/dummy/node_modules
+dummy/package-lock.json
 .DS_Store
 backend/.env
 backend/target/
