--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "lint": "eslint src --fix",
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "start-win":"set DISABLE_ESLINT_PLUGIN=true && react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
     "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject"
