--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-cookie": "4.1.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.1",
