--- a/dummy/package.json
+++ b/dummy/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "lint": "eslint src --fix",
     "start": "export PORT=3001 && DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "start-win": "react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
     "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject"
