--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "eslint-config-airbnb": "^19.0.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
