--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
