--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,5 @@ dotenv_codegen = "0.15.0"
 rand = "0.8.4"
 reqwest = { version = "0.11.9", features = ["blocking", "json"] }
 time = "0.1.37"
+lettre = "0.9.6"
+lettre_email = "0.9.4"
